# mcp-server-runner

./: Cargo.toml  Dockerfile  LICENSE  README.md  config.json  docker-compose.yaml  test.html
src/: constants.rs  lib.rs  lib.rs.bak  main.rs  process_manager.rs  shutdown.rs  state.rs
src/config/: loader.rs  mod.rs  model.rs
src/process/: io.rs  manager.rs  mod.rs
src/websocket/: message.rs  mod.rs
